bulls and cows v12

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Created by .ignore support plugin (hsz.mobi)
 test.py
+grok/*.*
 **probe.py
 
 # User-specific stuff:
@@ -215,3 +216,6 @@ fabric.properties
 
 # Editor-based Rest Client
 .idea/httpRequests
+/grok/def_sort.py
+/grok/
+/grok/
